# sdl-libretro

./: CMakeLists.txt
src/audio/: SDL_audio.c
src/audio/libretro/: SDL_LIBRETROaudio.c  SDL_LIBRETROaudio.h
src/video/libretro/: SDL_LIBRETROevents.c
